pxc/tests/test_194_ephemeral/eph4.px

public namespace eph4;
import core::common -;

ephemeral struct foo(int x0) {
  public int x = x0;
}

pure function foo test_ephemeral_escape(int x)
{
  foo r = foo(x);
  r.x = x;
  return r; // error: returning invalid ephemeral value
}

{
  test_ephemeral_escape(3);
}
